# asdf-zarr

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/asdf_zarr/: __init__.py  converter.py  integration.py  storage.py  util.py
src/asdf_zarr/resources/manifests/: chunked_ndarray-0.1.0.yaml
src/asdf_zarr/resources/schemas/: chunked_ndarray-0.1.0.yaml
tests/: test_zarr_array.py
